// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionContainment /> shows the correct snapshot tree for the <SectionContainment> element 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  max-width: 960px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 16px;
  padding-left: 16px;
}

<section
  className="css-0"
/>
`;

exports[`<SectionContainment /> shows the correct snapshot tree for the <SectionContainment> element with options 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  max-width: 960px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 24px;
  padding-left: 24px;
  margin-top: auto;
  margin-bottom: auto;
  padding-top: 24px;
  padding-bottom: 24px;
}

<section
  className="css-0"
/>
`;
